Feat: update os to ubuntu18.04 with python 2.7.15

--- a/project_tools/Dockerfile
+++ b/project_tools/Dockerfile
@@ -1,4 +1,4 @@
-FROM hub.qixincha.com/python:2.7.14
+FROM registry.cn-beijing.aliyuncs.com/wisdocker/ubuntu18.04_python2.7.15:latest
 ENV PYTHONUNBUFFERED 1
 RUN sed -i 's/deb.debian.org/mirrors.ustc.edu.cn/g' /etc/apt/sources.list
 RUN mkdir /code
